k8s/k8s-08/deployment_tls.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: praqma/network-multitool
      volumes:
      - name: index
        configMap:
          name: files

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.app.local
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend: 
            service:
              name: nginx
              port:
                number: 80
  tls:
    - hosts:
      - test.app.local
      secretName: nginx-tls
